<resources>
    <string name="app_name">Appserbabisa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="pass">pass</string>
    <string name="login">Login</string>
    <string name="register4">Register4</string>
    <string name="namalengkap">namalengkap</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="register">register</string>
</resources>